--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QKJDYVEC2W"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-VX6C716ME4"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
-    gtag('config', 'G-QKJDYVEC2W');
+    gtag('config', 'G-VX6C716ME4');
   </script>
   <meta charset="utf-8" />
   <meta name="google-site-verification" content="S8CcmlpF51tfKeRI6Z-n6ZOqNThhDKMHjPrR2FtiGC8" />
